fixed overlapping footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,9 +31,9 @@ p {
 }
 
 
-footer {
+/*footer {
 	position: absolute;
 	bottom:0;
 	
-	
-}
+}*/
+
